# scurve_traj_generation

./: .gitignore  LICENSE  README.md
traj/: CMakeLists.txt  package.xml  setup.py
traj/Figs/timing_info_1000_waypts/: exec_time_1000_waypts.txt
traj/Figs/timing_info_100_waypts/: exec_time_100_waypts.txt
traj/Figs/timing_info_16_waypts/: exec_time_16_waypts.txt
traj/launch/: robot_demo.launch  sim_demo.launch
traj/scripts/: calculate_exec_timing.py  demo  estimated_max_vel_example.py  example_toppra_s_variable  example_toppra_time_domain.py  generate_exception_test_cases.py  generate_random_test_cases.py  parameterize_path_example  plot_bag  seven_segment_example  seven_segment_trajectory  statistics_1000_exec_time_of_1000_waypts.txt  statistics_1000_exec_time_of_100_waypts.txt  statistics_1000_exec_time_of_16_waypts.txt  synchronized_segment_example.py  synchronized_traj_example.py  tcpdump  time_unsynchronized_estimated_max_vel.py  traj_segment_example
traj/src/traj/: Untitled Document  __init__.py  cubic_eq_roots.py  find_sync_jerk.py  max_reachable_vel.py  new_trajectory.py  param_max_reachable_vel.py  parameterize_path.py  piecewise_function.py  plot.py  plot_traj_segment.py  project_on_s_variable_v.py  project_on_s_variable_v0.py  sample_segment.py  (+22 more)
traj/test/: average_time_to_fit_traj_segment.py  generate_exception_test_cases.py  generate_random_test_cases.py  test_min_real_root_cubic_eq.py  test_parameterize_path.py  test_seven_segment.py  test_seven_segment_type3.py  test_seven_segment_type4.py  test_traj_segment.py  test_traj_segment_middle_points.py
(+6 files in other folders)
