<?xml version="1.0"?>
<package format="2">
  <name>traj</name>
  <version>0.0.0</version>
  <description>Python library for trjactory manipulation</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
